# mini_lms_app

./: .env.example  .gitignore  README.md  docker-compose.yml  pyrightconfig.json  test_api.sh
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  main.py  seed_data.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  class_model.py  class_registration.py  parent.py  student.py  subscription.py  user.py
backend/app/routers/: __init__.py  auth.py  classes.py  parents.py  students.py  subscriptions.py
backend/app/schemas/: __init__.py  class_schema.py  parent.py  registration.py  student.py  subscription.py  user.py
backend/app/services/: __init__.py  class_service.py  parent_service.py  student_service.py  subscription_service.py
backend/tests/: __init__.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  ProtectedRoute.tsx  RootRedirect.tsx
frontend/src/components/admin/: ClassesManagement.tsx  EditClassModal.tsx  EditStudentModal.tsx  EditSubscriptionModal.tsx  ParentsManagement.tsx  StudentsManagement.tsx  SubscriptionsManagement.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AdminPanel.tsx  Login.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
system_docs/: TEST_DATA_REFERENCE.md  api_documentation.md  er_diagram.md  tech_stack.md  use_cases.md
(+2 files in other folders)
